初期テキスト追加

--- a/compassheading/index.html
+++ b/compassheading/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
 <img id="compass" src="images/compass.png" width="300" height="44" alt="" />
-<div id="debug"></div>
+<div id="debug">方角 : 0</div>
 </body>
 </html>
