--- a/deviceorientation/index.html
+++ b/deviceorientation/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="../common/css/normalize.css" />
 	<link rel="stylesheet" href="css/index.css" />
 	<script src="../common/js/jquery-1.11.1.min.js"></script>
+	<script src="js/gyronorm.complete.min.js"></script>
 	<script src="js/index.js"></script>
 </head>
 <body>
