--- a/deviceorientation/index.html
+++ b/deviceorientation/index.html
@@ -7,13 +7,16 @@
 	<title>DeviceOrientation Event Demo</title>
 	<link rel="stylesheet" href="../common/css/common.css" />
 	<link rel="stylesheet" href="../common/css/normalize.css" />
+	<link rel="stylesheet" href="http://cesiumjs.org/releases/1.24/Build/Cesium/Widgets/widgets.css" />
 	<link rel="stylesheet" href="css/index.css" />
 	<script src="../common/js/jquery-1.11.1.min.js"></script>
 	<script src="js/gyronorm.complete.min.js"></script>
+	<script src="https://cesiumjs.org/releases/1.24/Build/Cesium/Cesium.js"></script>
 	<script src="js/index.js"></script>
 </head>
 <body>
-<img id="zo" src="images/zo.png" width="251" height="172" alt="" />
+<!--img id="zo" src="images/zo.png" width="251" height="172" alt="" /-->
+<div id="cesium" class="cesium"></div>
 <div id="debug"></div>
 </body>
 </html>
