--- a/deviceorientation/index.html
+++ b/deviceorientation/index.html
@@ -12,7 +12,8 @@
 	<script src="../common/js/jquery-1.11.1.min.js"></script>
 	<script src="js/gyronorm.complete.min.js"></script>
 	<script src="https://cesiumjs.org/releases/1.24/Build/Cesium/Cesium.js"></script>
-	<script src="js/index.js?version=0.5"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+	<script src="js/index.js?version=0.6"></script>
 </head>
 <body>
 <!--img id="zo" src="images/zo.png" width="251" height="172" alt="" /-->
